# astral

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsLinux.txt  CMakeListsWindows.txt  Makefile  README.md  TODO.md  astral.js  astral.wasm  cmake_install.cmake  index.html  shell.html
.github/workflows/: web-deploy-stage.yml  web-deploy.yml
Assets/Levels/: level1-1.csv  level1-1.tmx  level1-2.csv  level1-2.tmx
Assets/Levels/map1/: layer0.csv  map.json  spritefusion_map.json
Assets/Levels/map2/: map.json  map2_layer0.csv  map2_layer1.csv  map2_layer2.csv  spritefusion_map2.json
Assets/Levels/map_1/: dungeon.tsx  dungeon_2.tsx  map_tiled.json  mine.tsx  struct.tsx
Assets/Levels/map_2/: dungeon_3.tsx  map_tiled.json  props.tsx
Assets/Sprites/Enemy/: texture.json
Assets/Sprites/EnemyB/: texture.json
Assets/Sprites/Goomba/: Goomba.json
Assets/Sprites/Portal/: texture.json
Assets/Sprites/Projectile/: projectile_effect_anim.json
Assets/Sprites/Punk/: texture.json
Source/: AudioSystem.cpp  Game.cpp  Game.h  HUD.cpp  HUD.h  Main.cpp  Math.cpp  Math.h  SpatialHashing.h
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  Brick.cpp  Brick.h  Enemy.cpp  Enemy.h  Goomba.cpp  Goomba.h  Item.h  Mario.cpp  Mario.h  Portal.cpp  Portal.h  Projectile.cpp  Projectile.h  ProjectileEffect.cpp  ProjectileEffect.h  Punk.cpp  Punk.h  PunkArm.cpp  PunkArm.h  Spawner.cpp  Spawner.h  Weapon.cpp  Weapon.h
Source/Actors/FSM/: Attack.cpp  Attack.h  Chase.cpp  Chase.h  Patrol.cpp  Patrol.h  State.h
Source/Components/: Component.cpp  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawRectangleComponent.cpp  DrawRectangleComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/UIElements/: DialogueSystem.cpp  UIButton.cpp  UIButton.h  UIElement.h  UIFont.cpp  UIImage.cpp  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
assets/Config/: config.json
assets/Levels/: how_to_use.txt
assets/Levels/Maps/: bedroom.json  bedroomFinal.json  bedroomPortal.json  demo.json  demo2.json  demo_small.json  demo_test.json  level1.json  level2.json  tests.json
assets/Levels/Tilesets/: Crate.json  MetalCrate.json  Nebula-Terrain.json  Platforms (32x32).json  Terrains and black wall.json  Torch.json  bedroom.json  demo.json  demo2.json
assets/Levels/map_1/: grass.tsx  plant.tsx  props.tsx  stone.tsx  wall.tsx
assets/Sprites/Crate/: texture.json
assets/Sprites/Enemies/Quasar/: texture.json
assets/Sprites/Enemies/Sith/: texture.json
assets/Sprites/Enemies/Sith/Projectile/: texture.json
assets/Sprites/Enemies/Traps/Shuriken/: texture.json
assets/Sprites/Enemies/Traps/Spear/: texture.json
assets/Sprites/Enemies/Zathura/: texture.json
assets/Sprites/Enemies/Zod/: texture.json
assets/Sprites/EnemyB/: texture.json
assets/Sprites/Father/: texture.json
assets/Sprites/Hud/playerFrame/: texture.json
assets/Sprites/Items/Book/: texture.json
assets/Sprites/Items/Dog/: texture.json
assets/Sprites/Items/Flame/: texture.json
assets/Sprites/Items/Fridge/: texture.json
assets/Sprites/Items/Picture/: texture.json
assets/Sprites/Items/TV/: texture.json
assets/Sprites/Joystick/: texture.json
assets/Sprites/MetalCrate/: texture.json
assets/Sprites/Mother/: texture.json
assets/Sprites/Portal/: texture.json
assets/Sprites/PortalRoxo/: texture.json
assets/Sprites/Snow/: texture.json
assets/Sprites/Star/: texture.json
assets/Sprites/Torch/: texture.json
assets/Sprites/Zoe/: texture.json
assets/Sprites/Zoe/Fireball/: texture.json
assets/Sprites/Zoe/Nevasca/: texture.json
assets/Sprites/Zoe/Ventania/: texture.json
src/: Main.cpp
src/actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  Button.h  Collider.cpp  Collider.h  Crate.cpp  Crate.h  Dog.cpp  Dog.h  Enemy.cpp  Enemy.h  Father.cpp  Father.h  Item.cpp  Item.h  MapObject.cpp  MapObject.h  MetalCrate.cpp  MetalCrate.h  Mother.cpp  Mother.h  Nevasca.cpp  Nevasca.h  Portal.cpp  Portal.h  Projectile.cpp  Projectile.h  Punk.cpp  Punk.h  PunkArm.cpp  PunkArm.h  Snow.cpp  Snow.h  Spawner.cpp  Star.cpp  Star.h  TV.cpp  TV.h  (+13 more)
src/actors/enemies/: Quasar.cpp  Quasar.h  Sith.cpp  Sith.h  SithProjectile.cpp  SithProjectile.h  Zathura.cpp  Zathura.h  ZathuraRock.cpp  ZathuraRock.h  Zod.cpp  Zod.h  ZodProjectile.cpp  ZodProjectile.h
src/actors/traps/: Shuriken.cpp  Shuriken.h  Spear.cpp  Spear.h  Spikes.cpp  Spikes.h
src/components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h  TimerComponent.h
src/components/ai/: AIMovementComponent.cpp  AIMovementComponent.h
src/components/collider/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h
src/components/draw/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h  DrawTileComponent.cpp  DrawTileComponent.h
src/core/: AudioSystem.cpp  AudioSystem.h  Checkpoint.h  Config.cpp  Config.h  Cutscene.cpp  Cutscene.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Map.cpp  Map.h  ScenesLoading.cpp  SpatialHashing.cpp  SpatialHashing.h  Steps.cpp  Tileset.cpp  Tileset.h
src/libs/: Math.h
src/ui/: DialogueSystem.cpp  DialogueSystem.h  UIAnimation.cpp  UIAnimation.h  UIButton.cpp  UIButton.h  UICursor.cpp  UICursor.h  UIElement.cpp  UIElement.h  UIFont.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
stage/: CMakeCache.txt  Makefile  astral.js  astral.wasm  cmake_install.cmake  index.html
tiled/: untitled.tiled-session
tiled/maps/: bedroom.tmx  bedroomFinal.tmx  bedroomPortal.tmx  demo.tmx  demo_small.tmx  level1.tmx  level2.tmx  tests.tmx
tiled/tilesets/: Crate.tsx  MetalCrate.tsx  Nebula-Terrain.tsx  Platforms (32x32).tsx  Terrain and Back Wall (32x32).tsx  Torch.tsx  bedroom.tsx
(+4 files in other folders)
